# neural-iap-data

./: .gitignore  README.md  pyproject.toml
neural_iap_data/: __init__.py  neighborlist.py  transforms.py  utils.py
neural_iap_data/data/: __init__.py  atomsdata.py  atomsdataset.py  atomsgraph.py
neural_iap_data/datasets/: __init__.py  sgdml.py
tests/: commons.py  test_atoms_graph.py  test_datasets.py  test_neighborlist.py
